--- a/dev_3/mainapp/templates/mainapp/index.html
+++ b/dev_3/mainapp/templates/mainapp/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Списки групп</title>
+    <title>КПК</title>
 </head>
 <body>
-
+<h1>Список групп</h1>
 </body>
 </html>
