--- a/dev_3/mainapp/templates/mainapp/index.html
+++ b/dev_3/mainapp/templates/mainapp/index.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>КПК</title>
-</head>
-<body>
-<h1>Список групп</h1>
-</body>
-</html>
+{% extends 'mainapp/base.html' %}
+
+{% block content %}
+    <h1>Колледж</h1>
+<!--    <div class="menu">-->
+<!--        <ul>-->
+<!--            {% for groups in groups %}-->
+<!--                <li>-->
+<!--                    <a href="{% url 'mainapp' categories.pk %}">-->
+<!--                       {{ categories }}-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--            {% endfor %}-->
+<!--        </ul>-->
+<!--    </div>-->
+
+{% endblock %}
